--- a/login.html
+++ b/login.html
@@ -22,6 +22,21 @@
             <i id="bar"class='bx bx-menu'></i>
         </div>
     </header>
+        <section class="hero">
+        <div class="hero-box obj-width">
+            <div class="h-left">
+                <h2>Find the perfect freelance services for your business.</h2>
+                <p>Work with talented people at the most affordable price to get the most out of your time and cost.</p>
+                <div class="search">
+                    <input type="text" placeholder="search your job here..">
+                    <a id="g-btn"href="#">Search</a>
+                </div>
+            </div>
+            <div class="h-right">
+                <img src="image.jpg" alt="">
+            </div>
+        </div>
+    </section>
 
     <main>
         <div id="login-section" class="container fade fade-in">
